fix: [Bug] QInput letters are cut off bottom: line-height fix needed #2084

--- a/src/components/input/input.mat.styl
+++ b/src/components/input/input.mat.styl
@@ -30,9 +30,10 @@
   &:invalid
     box-shadow inherit
 
-input.q-input-target
-  height 19px
-  outline 0
+input, textarea
+  &.q-input-target
+    line-height 19px
+    outline 0
 .q-input-chips
   min-height 36px !important
 
